--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-
-
-
-
-
-
 <!doctype html>
 <html lang="en">
 	<head>
@@ -570,11 +564,11 @@
 		</div>
 		<div class="album text-center">
 			<div class="container">
-				<!--<div class="row justify-content-center">			
+				<div class="row justify-content-center">			
 					<div class="col-12 col-md-10 pt-3">
 						<div class="card">
 							<div class="card-body fade-in">
-								<h2 class="thisweeksmenu">menu for Sunday September 25: <span class="notThisWeek">sold out!</span></h2>
+								<h2 class="thisweeksmenu">menu for Sunday October 2: <span class="notThisWeek">sold out!</span></h2>
 								<p class="card-text">You missed it this time but bakeday will be back soon! Sign up for the mailing list below to be the first to know next time it's happening!</p>
 								<div id="mc_embed_signup">
 									<form action="https://github.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
@@ -592,8 +586,8 @@
 							</div>
 						</div>
 					</div>
-				</div>-->
-				<div class="row justify-content-center ">
+				</div>
+				<!--<div class="row justify-content-center ">
 					<h2 class="thisweeksmenu pink pb-2">menu for Sunday October 2</h2>
 					<div class="col-12 col-md-4">
 						<div class="card">
@@ -630,7 +624,7 @@
 					</div>			
 				</div>
 
-				<!--<div class="row justify-content-center">			
+				<div class="row justify-content-center">			
 					<div class="col-12 col-md-12">
 						<div class="card">
 							<div class="card-body fade-in">
@@ -788,10 +782,3 @@
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUnGd-MaeP0IlSu2G2dc7hlsx0Sy2GVUg&callback=initMap&v=weekly" async></script>
 	</body>
 </html>
-
-
-
-
-
-
-
