--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<!-- Brand New pushed from script -->
+		<!-- Even Newer pushed from script -->
 		<!-- Google Tag Manager -->
 		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
