Starting a new bakeday

--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
 		</div>
 		<div class="album text-center">
 			<div class="container">
-				<div class="row justify-content-center">			
+				<!--<div class="row justify-content-center">			
 					<div class="col-12 col-md-10 pt-3">
 						<div class="card">
 							<div class="card-body fade-in">
@@ -585,13 +585,13 @@
 							</div>
 						</div>
 					</div>
-				</div>
-				<!--<div class="row justify-content-center ">
-					<h2 class="thisweeksmenu pink pb-2">menu for Sunday October 2</h2>
+				</div>-->
+				<div class="row justify-content-center ">
+					<h2 class="thisweeksmenu pink pb-2">menu for Sunday October 23</h2>
 					<div class="col-12 col-md-4">
 						<div class="card">
 							<div class="card-body fade-in menuItem">
-		    					<h4>#1 cardamom caramel croissant swirl</h4>
+		    					<h4>#1 cardamom bun</h4>
 								<p class="card-text">A croissant bun layered with cardamom caramel and dusted with cinnamon sugar. <a href="https://www.instagram.com/p/Ci8VhOUveHr/">Here's a picture.</a> Looks delicious, right?</p>
 							</div>
 						</div>
@@ -619,11 +619,11 @@
 							<div class="card-body fade-in menuItem">
 								<h4>#4 choco-no-nut cookie</h4>
 								<p class="card-text">A big, chewy chocolate chip cookie with coconut flakes in the background and NO NUTS. People really lose their minds for this cookie.</p>
-						</div>
-					</div>			
-				</div>
-
-				<div class="row justify-content-center">			
+							</div>
+						</div>			
+					</div>
+				</div>	
+				<!--<div class="row justify-content-center">			
 					<div class="col-12 col-md-12">
 						<div class="card">
 							<div class="card-body fade-in">
