--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<!-- 1006 sold out 2 -->
+		<!-- 1023 sold out -->
 		<!-- Google Tag Manager -->
 		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 		new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -566,12 +566,12 @@
 		</div>
 		<div class="album text-center">
 			<div class="container">
-				<!--<div class="row justify-content-center">			
+				<div class="row justify-content-center">			
 					<div class="col-12 col-md-10 pt-3">
 						<div class="card">
 							<div class="card-body fade-in">
-								<h2 class="thisweeksmenu"><span class="notThisWeek">no bakeday this week</span></h2>
-								<p class="card-text">I'm sleeping in this Sunday but bakeday will be back soon! Sign up for the mailing list below to be the first to know next time it's happening!</p>
+								<h2 class="thisweeksmenu">menu for Sunday October 23<span class="notThisWeek">sold out!</span></h2>
+								<p class="card-text">Aw man you missed it but bakeday will be back soon! Sign up for the mailing list below to be the first to know next time it's happening!</p>
 								<div id="mc_embed_signup">
 									<form action="https://github.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 										<div id="mc_embed_signup_scroll">
@@ -585,13 +585,13 @@
 							</div>
 						</div>
 					</div>
-				</div>-->
-				<div class="row justify-content-center ">
-					<h2 class="thisweeksmenu pink pb-2">menu for Sunday October 23</h2>
+				</div>
+				<!--<div class="row justify-content-center ">
+					<h2 class="thisweeksmenu pink pb-2">menu for Sunday October 2</h2>
 					<div class="col-12 col-md-4">
 						<div class="card">
 							<div class="card-body fade-in menuItem">
-		    					<h4>#1 cardamom bun</h4>
+		    					<h4>#1 cardamom caramel croissant swirl</h4>
 								<p class="card-text">A croissant bun layered with cardamom caramel and dusted with cinnamon sugar. <a href="https://www.instagram.com/p/Ci8VhOUveHr/">Here's a picture.</a> Looks delicious, right?</p>
 							</div>
 						</div>
@@ -619,11 +619,11 @@
 							<div class="card-body fade-in menuItem">
 								<h4>#4 choco-no-nut cookie</h4>
 								<p class="card-text">A big, chewy chocolate chip cookie with coconut flakes in the background and NO NUTS. People really lose their minds for this cookie.</p>
-							</div>
-						</div>			
-					</div>
-				</div>	
-				<!--<div class="row justify-content-center">			
+						</div>
+					</div>			
+				</div>
+
+				<div class="row justify-content-center">			
 					<div class="col-12 col-md-12">
 						<div class="card">
 							<div class="card-body fade-in">
@@ -632,16 +632,16 @@
 								<p class="card-text">I'm sleeping in this Sunday but you can sign up for the mailing list below to be the first to know next time Bakeday is happening!</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 								<div id="mc_embed_signup">
-								<form action="https://github.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    								<div id="mc_embed_signup_scroll">
-									<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-    									<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d8ad137324977f3a975bc2711_b2be11a859" tabindex="-1" value=""></div>
-        								<div class="clear foot">
-           									<input type="submit" value="subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
-       									</div>
-    								</div>
-								</form>
-							</div>								
+									<form action="https://github.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    										<div id="mc_embed_signup_scroll">
+											<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+    											<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d8ad137324977f3a975bc2711_b2be11a859" tabindex="-1" value=""></div>
+        											<div class="clear foot">
+           												<input type="submit" value="subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+       												</div>
+    											</div>
+									</form>
+								</div>								
 							</div>
 						</div>
 					</div>
