--- a/test.html
+++ b/test.html
@@ -397,13 +397,12 @@
 			color: #fed101;
 		}
 		.collapse {
-			border: 2px solid #f8d320;
 			border-radius: 15px;
 			padding: 0.5rem;
-			color: #f8d320;
+			color: #fb37f3;
 			font-family: 'Fredoka One', sans-serif;
 			font-size: 1.2rem;
-			background: #3000d0;
+			background: #fed101;
 		}
 		@media (min-width: 992px) {
 		    h1 {
