--- a/test.html
+++ b/test.html
@@ -1,5 +1,3 @@
-
-
 <!doctype html>
 <html lang="en">
 	<head>
@@ -445,16 +443,16 @@
 		}	
 		</style>
 		<script>
-var map;
-var geocoder; //Added on 27/09/2016
-var marker;
-var polygon;
-var bounds;
+		var map;
+		var geocoder; //Added on 27/09/2016
+		var marker;
+		var polygon;
+		var bounds;
 
-function initMap() {
-	map = new google.maps.Map(document.getElementById('map'), {
-		zoom: 11,
-		center: { lat: 42.963360, lng: -85.644000 },
+		function initMap() {
+			map = new google.maps.Map(document.getElementById('map'), {
+				zoom: 11,
+				center: { lat: 42.963360, lng: -85.644000 },
 				mapTypeId: "roadmap",
 				disableDefaultUI: true, // a way to quickly hide all controls
 				mapTypeControl: false,
@@ -462,171 +460,160 @@ function initMap() {
 				zoomControl: true,
 				keyboardShortcuts: false,
 				controlSize: 20,
-
-styles: [
-					{
-						"featureType": "all",
-						"elementType": "labels.text",
-						"stylers": [
+				styles: [
 							{
-								"visibility": "off"
-							}
-						]
-					},
-					{
-						"featureType": "all",
-						"elementType": "labels.icon",
-						"stylers": [
-							{
-								"visibility": "off"
-							}
-						]
-					},
-					{
-						"featureType": "administrative",
-						"elementType": "labels",
-						"stylers": [
-							{
-								"visibility": "simplified"
-							}
-						]
-					},
-					{
-						"featureType": "administrative",
-						"elementType": "labels.text.fill",
-						"stylers": [
-							{
-								"saturation": "-28"
+								"featureType": "all",
+								"elementType": "labels.text",
+								"stylers": [
+									{
+										"visibility": "off"
+									}
+								]
 							},
 							{
-								"lightness": "16"
-							}
-						]
-					},
-					{
-						"featureType": "road.highway",
-						"elementType": "geometry.fill",
-						"stylers": [
-							{
-								"visibility": "on"
+								"featureType": "all",
+								"elementType": "labels.icon",
+								"stylers": [
+									{
+										"visibility": "off"
+									}
+								]
 							},
 							{
-								"color": "#fed101"
-							}
-						]
-					},
-					{
-						"featureType": "road.highway",
-						"elementType": "geometry.stroke",
-						"stylers": [
-							{
-								"visibility": "on"
+								"featureType": "administrative",
+								"elementType": "labels",
+								"stylers": [
+									{
+										"visibility": "simplified"
+									}
+								]
 							},
 							{
-								"lightness": "71"
+								"featureType": "administrative",
+								"elementType": "labels.text.fill",
+								"stylers": [
+									{
+										"saturation": "-28"
+									},
+									{
+										"lightness": "16"
+									}
+								]
+							},
+							{
+								"featureType": "road.highway",
+								"elementType": "geometry.fill",
+								"stylers": [
+									{
+										"visibility": "on"
+									},
+									{
+										"color": "#fed101"
+									}
+								]
+							},
+							{
+								"featureType": "road.highway",
+								"elementType": "geometry.stroke",
+								"stylers": [
+									{
+										"visibility": "on"
+									},
+									{
+										"lightness": "71"
+									}
+								]
 							}
 						]
-					}
-				]
-	});
-	var center = new google.maps.LatLng(41.3899621, 2.1469796);
-  geocoder = new google.maps.Geocoder(); //Added on 27/09/2016
-	bounds = new google.maps.LatLngBounds();
-	google.maps.event.addListenerOnce(map, 'tilesloaded', function(evt) { 
-		bounds = map.getBounds();
-	});
-		marker = new google.maps.Marker({
-			position: center
-		});
-		var area= [
-			{ lat: 43.01532741040676, lng: -85.74420160591976 },
-			{ lat: 42.986075717540764, lng: -85.74420160591976 },
-			{ lat: 42.95718699758786, lng: -85.7436866217889 },
-			{ lat: 42.91885711583546, lng: -85.74454492867366 },
-			{ lat: 42.897608318438856, lng: -85.74385828316585 },
-			{ lat: 42.89735680952524, lng: -85.70437616646663 },
-			{ lat: 42.89748256411025, lng: -85.64583963692561 },
-			{ lat: 42.897575618382334, lng: -85.62639088944213 },
-			{ lat: 42.90486893450011, lng: -85.62639088944213 },
-			{ lat: 42.90486893450011, lng: -85.56751103714721 },
-			{ lat: 42.91216138786569, lng: -85.56802602127807 },
-			{ lat: 42.91190993831881, lng: -85.5287155659558 },
-			{ lat: 42.92108718213047, lng: -85.52991719559448 },
-			{ lat: 42.92133859423217, lng: -85.53884358719604 },
-			{ lat: 42.94899344926061, lng: -85.53930398632568 },
-			{ lat: 42.963064568340236, lng: -85.53964730907958 },
-			{ lat: 42.963567048799156, lng: -85.54393884350341 },
-			{ lat: 42.97072694940378, lng: -85.54479715038818 },
-			{ lat: 42.97072694940378, lng: -85.55990335156005 },
-			{ lat: 42.98516982601827, lng: -85.55904504467529 },
-			{ lat: 42.985420976468895, lng: -85.58359262157958 },
-			{ lat: 43.0287290741364, lng: -85.58324929882568 },
-			{ lat: 43.02951335953451, lng: -85.66989537884277 },
-			{ lat: 43.01517503971821, lng: -85.6773197333959 }
-		];
-		polygon = new google.maps.Polygon({
-			paths: area,
-			strokeColor: "#FC01F3",
-			strokeOpacity: 0.8,
-			strokeWeight: 2,
-			fillColor: "#FC01F3",
-			fillOpacity: 0.25,
-	});
+			});
+			var center = new google.maps.LatLng(41.3899621, 2.1469796);
+			geocoder = new google.maps.Geocoder();
+			bounds = new google.maps.LatLngBounds();
+			google.maps.event.addListenerOnce(map, 'tilesloaded', function(evt) { 
+				bounds = map.getBounds();
+			});
+			marker = new google.maps.Marker({
+				position: center
+			});
+			var area= [
+				{ lat: 43.01532741040676, lng: -85.74420160591976 },
+				{ lat: 42.986075717540764, lng: -85.74420160591976 },
+				{ lat: 42.95718699758786, lng: -85.7436866217889 },
+				{ lat: 42.91885711583546, lng: -85.74454492867366 },
+				{ lat: 42.897608318438856, lng: -85.74385828316585 },
+				{ lat: 42.89735680952524, lng: -85.70437616646663 },
+				{ lat: 42.89748256411025, lng: -85.64583963692561 },
+				{ lat: 42.897575618382334, lng: -85.62639088944213 },
+				{ lat: 42.90486893450011, lng: -85.62639088944213 },
+				{ lat: 42.90486893450011, lng: -85.56751103714721 },
+				{ lat: 42.91216138786569, lng: -85.56802602127807 },
+				{ lat: 42.91190993831881, lng: -85.5287155659558 },
+				{ lat: 42.92108718213047, lng: -85.52991719559448 },
+				{ lat: 42.92133859423217, lng: -85.53884358719604 },
+				{ lat: 42.94899344926061, lng: -85.53930398632568 },
+				{ lat: 42.963064568340236, lng: -85.53964730907958 },
+				{ lat: 42.963567048799156, lng: -85.54393884350341 },
+				{ lat: 42.97072694940378, lng: -85.54479715038818 },
+				{ lat: 42.97072694940378, lng: -85.55990335156005 },
+				{ lat: 42.98516982601827, lng: -85.55904504467529 },
+				{ lat: 42.985420976468895, lng: -85.58359262157958 },
+				{ lat: 43.0287290741364, lng: -85.58324929882568 },
+				{ lat: 43.02951335953451, lng: -85.66989537884277 },
+				{ lat: 43.01517503971821, lng: -85.6773197333959 }
+			];
+			polygon = new google.maps.Polygon({
+				paths: area,
+				strokeColor: "#FC01F3",
+				strokeOpacity: 0.8,
+				strokeWeight: 2,
+				fillColor: "#FC01F3",
+				fillOpacity: 0.25,
+			});
+			polygon.setMap(map);	
+			var input = document.getElementById('address-one');
+			var autocomplete = new google.maps.places.Autocomplete(input);
+			autocomplete.addListener('place_changed', function() {
+				marker.setMap(null);
+				var place = autocomplete.getPlace();
+				var newBounds = new google.maps.LatLngBounds(bounds.getCenter(), bounds.getCenter());
 
-	polygon.setMap(map);	
-	  
-	var input = document.getElementById('address-one');
-	var autocomplete = new google.maps.places.Autocomplete(input);
-	autocomplete.addListener('place_changed', function() {
-	marker.setMap(null);
-	var place = autocomplete.getPlace();
-	var newBounds = new google.maps.LatLngBounds(bounds.getCenter(), bounds.getCenter()); //Changed
-
-	  if (!place.geometry) {
-		geocodeAddress(input.value);        
-		return;
-	  };
-	  marker.setPosition(place.geometry.location);
-	  marker.setMap(map);
-	  newBounds.extend(place.geometry.location);
-	  map.fitBounds(newBounds);
-	  if (google.maps.geometry.poly.containsLocation(place.geometry.location, polygon)){
-		//alert('The area contains the address');  
-		document.getElementById("collapseSuccess").style.display = "none";
-		document.getElementById("collapseFail").style.display = "none";
-		document.getElementById("collapseSuccess").style.display = "block";
-	  } else {
-		document.getElementById("collapseSuccess").style.display = "none";
-		document.getElementById("collapseFail").style.display = "none";
-		document.getElementById("collapseFail").style.display = "block";
-	  };
-   });
-}
-//Added on 27/09/2016
-//*************************
-function geocodeAddress(addr) {
-	geocoder.geocode({'address': addr}, function(results, status) {
-	  if (status === 'OK') {
-  		var newBounds = new google.maps.LatLngBounds(bounds.getCenter(), bounds.getCenter());
-		  marker.setPosition(results[0].geometry.location);
-		  marker.setMap(map);
-		  newBounds.extend(results[0].geometry.location);
-		  map.fitBounds(newBounds);
-		  if (google.maps.geometry.poly.containsLocation(results[0].geometry.location, polygon)){
-			alert('The area contains the cool address');  
-		  } else {
-			alert('The address is outside of the area.');  
-		  };
-	  } else {
-		alert('Geocode was not successful for the following reason: ' + status);
-	  }
-	});
-}; 
-//*************************
-
-
-
-
+				if (!place.geometry) {
+					geocodeAddress(input.value);        
+					return;
+				};
+				marker.setPosition(place.geometry.location);
+				marker.setMap(map);
+				newBounds.extend(place.geometry.location);
+				map.fitBounds(newBounds);
+				if (google.maps.geometry.poly.containsLocation(place.geometry.location, polygon)){ 
+					document.getElementById("collapseSuccess").style.display = "none";
+					document.getElementById("collapseFail").style.display = "none";
+					document.getElementById("collapseSuccess").style.display = "block";
+				} else {
+					document.getElementById("collapseSuccess").style.display = "none";
+					document.getElementById("collapseFail").style.display = "none";
+					document.getElementById("collapseFail").style.display = "block";
+				};
+			});
+		}
+		function geocodeAddress(addr) {
+			geocoder.geocode({'address': addr}, function(results, status) {
+				if (status === 'OK') {
+					var newBounds = new google.maps.LatLngBounds(bounds.getCenter(), bounds.getCenter());
+					marker.setPosition(results[0].geometry.location);
+					marker.setMap(map);
+					newBounds.extend(results[0].geometry.location);
+					map.fitBounds(newBounds);
+					if (google.maps.geometry.poly.containsLocation(results[0].geometry.location, polygon)){
+						alert('The area contains the address');  
+					} else {
+						alert('The address is outside of the area.');  
+					};
+				} else {
+					alert('Geocode was not successful for the following reason: ' + status);
+				}
+			});
+		}; 
 		</script>
 	</head>
 	<body>
@@ -699,6 +686,7 @@ function geocodeAddress(addr) {
 							<div class="card-body fade-in menuItem">
 								<h4>#4 choco-no-nut cookie</h4>
 								<p class="card-text">A big, chewy chocolate chip cookie with coconut flakes in the background and NO NUTS. People really lose their minds for this cookie.</p>
+							</div>
 						</div>
 					</div>			
 				</div>
@@ -708,18 +696,19 @@ function geocodeAddress(addr) {
 						<div class="card">
 							<div class="card-body fade-in">
 							<h2 class="thisweeksmenu"><span class="notThisWeek">no bakeday this week!</span></h2>
-		    					
 								<p class="card-text">I'm sleeping in this Sunday but you can sign up for the mailing list below to be the first to know next time Bakeday is happening!</p>
 								<div class="d-flex justify-content-between align-items-center"></div>
 								<div id="mc_embed_signup">
 									<form action="https://github.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    										<div id="mc_embed_signup_scroll">
+    									<div id="mc_embed_signup_scroll">
 											<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-    											<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d8ad137324977f3a975bc2711_b2be11a859" tabindex="-1" value=""></div>
-        											<div class="clear foot">
-           												<input type="submit" value="subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
-       												</div>
-    											</div>
+											<div style="position: absolute; left: -5000px;" aria-hidden="true">
+												<input type="text" name="b_d8ad137324977f3a975bc2711_b2be11a859" tabindex="-1" value="">
+											</div>
+											<div class="clear foot">
+												<input type="submit" value="subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+											</div>
+										</div>
 									</form>
 								</div>								
 							</div>
