--- a/test.html
+++ b/test.html
@@ -1,3 +1,5 @@
+
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -440,6 +442,9 @@
 			.notthisweek {
 				display: block;
 			}
+			#address-one {
+				width: 100%;
+			}
 		}	
 		</style>
 		<script>
@@ -576,11 +581,6 @@
 				marker.setMap(null);
 				var place = autocomplete.getPlace();
 				var newBounds = new google.maps.LatLngBounds(bounds.getCenter(), bounds.getCenter());
-
-				if (!place.geometry) {
-					geocodeAddress(input.value);        
-					return;
-				};
 				marker.setPosition(place.geometry.location);
 				marker.setMap(map);
 				newBounds.extend(place.geometry.location);
@@ -596,24 +596,6 @@
 				};
 			});
 		}
-		function geocodeAddress(addr) {
-			geocoder.geocode({'address': addr}, function(results, status) {
-				if (status === 'OK') {
-					var newBounds = new google.maps.LatLngBounds(bounds.getCenter(), bounds.getCenter());
-					marker.setPosition(results[0].geometry.location);
-					marker.setMap(map);
-					newBounds.extend(results[0].geometry.location);
-					map.fitBounds(newBounds);
-					if (google.maps.geometry.poly.containsLocation(results[0].geometry.location, polygon)){
-						alert('The area contains the address');  
-					} else {
-						alert('The address is outside of the area.');  
-					};
-				} else {
-					alert('Geocode was not successful for the following reason: ' + status);
-				}
-			});
-		}; 
 		</script>
 	</head>
 	<body>
@@ -770,7 +752,7 @@
 							<h4>"I live on the Mongolian steppe - will you deliver pastries to me?"</h4>
 							<p class="answer">No. Grand Rapids area only, please. If you live in the purple area below we're cool. If you live outside of the delivery area, you're welcome to pick them up from Bakeday Towers in the Creston Heights area. <a href="mailto:orders@sundaybakeday.com">Message me!</a></p><p class="fw-bold">Enter your address below to make sure you're in the delivery zone!</p>
 						</div>
-						 <form><input id="address-one" onClick="this.select();" class="controls mb-3" placeholder="Enter your address" autocomplete="address-line1" type="text" name="address-one"></form>
+						<input id="address-one" onClick="this.select();" class="controls mb-3" placeholder="Enter your address" autocomplete="off" type="text">
 						<div class="collapse mb-3" id="collapseSuccess">Hooray! You're in the delivery zone!</div>
 						<div class="collapse mb-3" id="collapseFail">Oh no! You live too far away. You're welcome to order and pick up though!</div>
 						<div class="mb-3" id="map"></div>
