--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@
 							<h4>"I live on the Mongolian steppe - will you deliver pastries to me?"</h4>
 							<p class="answer">No. Grand Rapids area only, please. If you live in the purple area below we're cool. If you live outside of the delivery area, you're welcome to pick them up from Bakeday Towers in the Creston Heights area. <a href="mailto:orders@sundaybakeday.com">Message me!</a></p><p class="fw-bold">Enter your address below to make sure you're in the delivery zone!</p>
 						</div>
-						<input id="address-one" onClick="this.select();" class="controls mb-3" placeholder="Enter your address" autocomplete="off" type="text">
+						<input id="address-one" onClick="this.select();" class="controls mb-3" placeholder="Enter your address here" autocomplete="off" type="text">
 						<div class="collapse mb-3" id="collapseSuccess">Hooray! You're in the delivery zone!</div>
 						<div class="collapse mb-3" id="collapseFail">Oh no! You live too far away. You're welcome to order and pick up though!</div>
 						<div class="mb-3" id="map"></div>
