--- a/index.html
+++ b/index.html
@@ -619,8 +619,8 @@
 					<div class="col-12 col-md-10 pt-3">
 						<div class="card">
 							<div class="card-body fade-in">
-								<h2 class="thisweeksmenu">menu for Sunday October 23: <span class="notThisWeek">sold out!</span></h2>
-								<p class="card-text">Aw man you missed it but bakeday will be back soon! Sign up for the mailing list below to be the first to know next time it's happening!</p>
+								<h2 class="thisweeksmenu"><span class="notThisWeek">no bakeday this week</span></h2>
+								<p class="card-text">I'm sleeping in this Sunday but bakeday will be back soon! Sign up for the mailing list below to be the first to know next time it's happening!</p>
 								<div id="mc_embed_signup">
 									<form action="https://github.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 										<div id="mc_embed_signup_scroll">
