--- a/soldOut.html
+++ b/soldOut.html
@@ -617,8 +617,8 @@
 					<div class="col-12 col-md-10 pt-3">
 						<div class="card">
 							<div class="card-body fade-in">
-								<h2 class="thisweeksmenu">menu for Sunday Dec 11: <span class="notThisWeek">sold out!</span></h2>
-								<p class="card-text">Aw man you missed it but bakeday will be back soon! Sign up below to get an email alert next time it's happening!</p>
+								<h2 class="thisweeksmenu">menu for Sunday Dec 18: <span class="notThisWeek">sold out!</span></h2>
+								<p class="card-text">Aw man you missed it! Bakeday will be back very soon though. Sign up below to get an email alert next time it's happening!</p>
 								<div id="mc_embed_signup">
 									<form action="https://github.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 										<div id="mc_embed_signup_scroll">
