--- a/index_TEST.html
+++ b/index_TEST.html
@@ -613,42 +613,25 @@
 		</div>
 		<div class="album text-center">
 			<div class="container">
-				<div class="row justify-content-center ">
-					<h2 class="thisweeksmenu pink pb-2">menu for Sunday Dec 18</h2>
-					<div class="col-12 col-md-4">
+				<div class="row justify-content-center">			
+					<div class="col-12 col-md-10 pt-3">
 						<div class="card">
-							<div class="card-body fade-in menuItem">
-		    					<h4>#1 cardamom croissant bun</h4>
-								<p class="card-text">test 2</p>
+							<div class="card-body fade-in">
+								<h2 class="thisweeksmenu">menu for Sunday Dec 18: <span class="notThisWeek">sold out!</span></h2>
+								<p class="card-text">Aw man you missed it! Bakeday will be back very soon though. Sign up below to get an email alert next time it's happening!</p>
+								<div id="mc_embed_signup">
+									<form action="https://github.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+										<div id="mc_embed_signup_scroll">
+											<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+											<div class="clear foot">
+												<input type="submit" value="subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+											</div>
+										</div>
+									</form>
+								</div>								
 							</div>
 						</div>
 					</div>
-					<div class="col-12 col-md-4">
-						<div class="card">
-							<div class="card-body fade-in menuItem">
-								<h4>#2 blueberry scone</h4>
-								<p class="card-text">test 2</p>
-							</div>
-						</div>
-					</div>
-				</div>	
-				<div class="row justify-content-center ">
-					<div class="col-12 col-md-4">
-						<div class="card">
-							<div class="card-body fade-in menuItem">
-								<h4>#3 jalapeno scone</h4>
-								<p class="card-text">test 2</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-12 col-md-4">
-						<div class="card">
-							<div class="card-body fade-in menuItem">
-								<h4>#4 choco-no-nut cookie</h4>
-								<p class="card-text">test 2</p>
-							</div>
-						</div>
-					</div>			
 				</div>
 			</div>			
 		</div>
@@ -755,16 +738,16 @@
 						</div>
 						<div class="col-6 col-md-2 col-lg-2 mb-4 insta-box">
                             <a href="https://www.instagram.com/p/CdZW8wzrY2e/">
-                                <img src="https://i.imgur.com/nPxusMT.jpg" class="img-thumbnail" alt="Great content.">
+								<img src="https://i.imgur.com/nPxusMT.jpg" class="img-thumbnail" alt="Great content.">
                                 <span class="overlay"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="64"></span>
                             </a>
-                        </div>
+                       </div>
 						<div class="col-6 col-md-2 col-lg-2 mb-4 insta-box">
-                            <a href="https://www.instagram.com/p/Cd3Oe3OL-Z9/?utm_source=ig_web_copy_link">
-                                <img src="https://i.imgur.com/vrq8SZF.jpg" class="img-thumbnail" alt="Great content.">
-                                <span class="overlay"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="64"></span>
-                             </a>
-                        </div>
+							<a href="https://www.instagram.com/p/Cd3Oe3OL-Z9/?utm_source=ig_web_copy_link">
+								<img src="https://i.imgur.com/vrq8SZF.jpg" class="img-thumbnail" alt="Great content.">
+								<span class="overlay"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="64"></span>
+							</a>
+						</div>
 						<div class="col-6 col-md-2 col-lg-2 mb-4 insta-box">
 							<a href="https://www.instagram.com/p/Cdlv1aXO-05/">
 								<img src="https://i.imgur.com/D0iqKLk.jpg" class="img-thumbnail" alt="Great content.">
@@ -787,3 +770,4 @@
 		
 	</body>
 </html>
+
