--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<!-- End Google Tag Manager -->	
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="theme-color" content="#fed101">
+		<meta name="theme-color" content="#fb37f3">
 		<title>Sunday Bakeday</title>
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 		<link rel="stylesheet" src="/css/animate.css" crossorigin="anonymous">
