Starting a new bakeday

--- a/soldOut.html
+++ b/soldOut.html
@@ -11,6 +11,7 @@
 		<!-- End Google Tag Manager -->	
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="theme-color" content="#fb37f3">
 		<title>Sunday Bakeday</title>
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 		<link rel="stylesheet" src="/css/animate.css" crossorigin="anonymous">
@@ -617,7 +618,7 @@
 					<div class="col-12 col-md-10 pt-3">
 						<div class="card">
 							<div class="card-body fade-in">
-								<h2 class="thisweeksmenu">menu for Sunday Dec 18: <span class="notThisWeek">sold out!</span></h2>
+								<h2 class="thisweeksmenu">menu for Sunday Nov 13: <span class="notThisWeek">sold out!</span></h2>
 								<p class="card-text">Aw man you missed it! Bakeday will be back very soon though. Sign up below to get an email alert next time it's happening!</p>
 								<div id="mc_embed_signup">
 									<form action="https://github.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
