--- a/success.html
+++ b/success.html
@@ -46,7 +46,7 @@
 		<div class="text-center mb-3">
 			<div class="px-2 pt-4 fade-in">
 				<a href="https://www.instagram.com/sunday.bakeday/"><img class="logo d-block mx-auto" src="https://sundaybakeday.com/newlogoweb2.png" alt="Sunday Bakeday logo"></a>
-				<h1>success!</h1>
+				<h1>nice one!</h1>
 			</div>
 		</div>
 		<div class="container">
