--- a/success.html
+++ b/success.html
@@ -52,7 +52,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 mx-auto" style="text-align:center;">
-					<h4 class="white">Thanks for signing up! You'll be the first to know whenever bakeday is happening.</h4> <a href="https://www.sundaybakeday.com">Click here to return to sundaybakeday.com</a>.
+					<h4 class="white">Thanks for signing up! You'll be the first to know whenever bakeday is happening.</h4><p><a href="https://www.sundaybakeday.com">Click here to return to sundaybakeday.com</a>.</p>
 				</div>
 			</div>		
 		</div>
