--- a/index.html
+++ b/index.html
@@ -618,8 +618,8 @@
 					<div class="col-12 col-md-10 pt-3">
 						<div class="card">
 							<div class="card-body fade-in">
-								<h2 class="thisweeksmenu">menu for Sunday Nov 27: <span class="notThisWeek">sold out!</span></h2>
-								<p class="card-text">Aw man you missed it! Bakeday will be back very soon though. Sign up below to get an email alert next time it's happening!</p>
+								<h2 class="thisweeksmenu"><span class="notThisWeek">no bakeday this week!</span></h2>
+								<p class="card-text">I'm sleeping in this Sunday but bakeday will be back very soon. Sign up below to get an email alert next time it's happening! You can also enter your phone number if you want a text message too.</p>
 								<div id="mc_embed_signup">
 									<form action="https://github.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859&amp;f_id=00df4ee6f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_self">
 										<div id="mc_embed_signup_scroll">									   
