--- a/index.html
+++ b/index.html
@@ -619,11 +619,12 @@
 						<div class="card">
 							<div class="card-body fade-in">
 								<h2 class="thisweeksmenu"><span class="notThisWeek">no bakeday this week!</span></h2>
-								<p class="card-text">I'm sleeping in this Sunday but bakeday will be back very soon. Sign up below to get an email alert next time it's happening! You can also enter your phone number if you want a text message too.</p>
+								<p class="card-text">Bakeday will be back very soon. Sign up below to get an email alert or a text message next time it's happening!</p>
 								<div id="mc_embed_signup">
-									<form action="https://github.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859&amp;f_id=00df4ee6f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_self">
+									<form action="https://sundaybakeday.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859&amp;f_id=00df4ee6f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_self">
 										<div id="mc_embed_signup_scroll">									   
 											<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="email address" required>
+											<input type="text" name="PHONE" class="required email" value="" id="mce-PHONE" placeholder="phone number (optional)">
 											<div hidden="true"><input type="hidden" name="tags" value="3139784"></div>
 											<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d8ad137324977f3a975bc2711_b2be11a859" tabindex="-1" value=""></div>
 											<div class="clear"><input type="submit" value="subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
