--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
 						<div class="card">
 							<div class="card-body fade-in">
 								<h2 class="thisweeksmenu"><span class="notThisWeek">no bakeday this week!</span></h2>
-								<p class="card-text">Bakeday will be back very soon. Sign up below to get an email alert/text message next time it's happening!</p>
+								<p class="card-text">Bakeday will be back very soon. Sign up below to be the first to know next time it's happening!</p>
 								<div id="mc_embed_signup">
 									<form action="https://sundaybakeday.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859&amp;f_id=00df4ee6f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_self">
 										<div id="mc_embed_signup_scroll">									   
