--- a/checkout.html
+++ b/checkout.html
@@ -28,6 +28,7 @@
                 shape: 'pill',
                 height: 40,
               },
+              "allow_tip": true,
 
               // set up the transaction
               createOrder: (data, actions) => {
