Starting a new bakeday

--- a/soldOut.html
+++ b/soldOut.html
@@ -611,7 +611,7 @@
 					<div class="col-12 col-md-10 pt-3">
 						<div class="card">
 							<div class="card-body fade-in">
-								<h2 class="thisweeksmenu">menu for Sunday Dec 18: <span class="notThisWeek">sold out!</span></h2>
+								<h2 class="thisweeksmenu">menu for Sunday Jan 15: <span class="notThisWeek">sold out!</span></h2>
 								<p class="card-text">Aw man you missed it! Bakeday will be back very soon though. Sign up below to be the first to know next time it's happening!</p>
 								<div id="mc_embed_signup">
 									<form action="https://sundaybakeday.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859&amp;f_id=00df4ee6f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_self">
@@ -701,7 +701,7 @@
 						</div>							
 						<div class="mb-3">
 							<h4>"I use Venmo like twice a year to pay my babysitter or whatever. How do I order with Venmo?"</h4>
-							<p class="answer">It's easy! Just send $20 plus an extravagant tip to <a href="https://venmo.com/sundaybakeday">@sunday.bakeday</a> and include your order and address in the message. Here's an example of a typical order:</p>
+							<p class="answer">It's easy! Just send $20 plus an extravagant tip to <a href="https://venmo.com/sundaybakeday">@sundaybakeday</a> and include your order and address in the message. Here's an example of a typical order:</p>
 							<p style="font-style: italic;">"#1 #3 #4 #5 please! 420 Diamond Ave SE. Please leave at the side door. Thanks! I love you."</p>
 						</div>							
 						<div class="mb-3">
