--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
 								"elementType": "labels.text",
 								"stylers": [
 									{
-										"visibility": "off"
+										"visibility": "on"
 									}
 								]
 							},
@@ -607,26 +607,51 @@
 		</div>
 		<div class="album text-center">
 			<div class="container">
-				<div class="row justify-content-center">			
-					<div class="col-12 col-md-10 pt-3">
+				<div class="row justify-content-center">
+					<h2 class="thisweeksmenu pink pb-2">menu for Sunday Jan 15</h2>
+					<div class="col-12 col-md-4">
 						<div class="card">
-							<div class="card-body fade-in">
-								<h2 class="thisweeksmenu">menu for Sunday Jan 8: <span class="notThisWeek">sold out!</span></h2>
-								<p class="card-text">Aw man you missed it! Bakeday will be back very soon though. Sign up below to be the first to know next time it's happening!</p>
-								<div id="mc_embed_signup">
-									<form action="https://sundaybakeday.us20.list-manage.com/subscribe/post?u=d8ad137324977f3a975bc2711&amp;id=b2be11a859&amp;f_id=00df4ee6f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_self">
-										<div id="mc_embed_signup_scroll">									   
-											<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="email address" required>
-											<input type="number" name="PHONE" class="required email" value="" id="mce-PHONE" placeholder="phone number (optional)">
-											<div hidden="true"><input type="hidden" name="tags" value="3139784"></div>
-											<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d8ad137324977f3a975bc2711_b2be11a859" tabindex="-1" value=""></div>
-											<div class="clear"><input type="submit" value="sign up" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-										</div>
-									</form>
-								</div>								
+							<div class="card-body fade-in menuItem">
+		    					<h4>#1 pain au chocolat</h4>
+								<p class="card-text">A big croissant-dough pillow filled with rich dark chocolate.  </p>
 							</div>
 						</div>
 					</div>
+					<div class="col-12 col-md-4">
+						<div class="card">
+							<div class="card-body fade-in menuItem">
+								<h4>#2 blueberry lemon scone</h4>
+								<p class="card-text">A bakeday classic with a drizzle of lemon glaze. Made with big fat organic bloobs.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-4">
+						<div class="card">
+							<div class="card-body fade-in menuItem">
+								<h4>#3 jalapeno cheddar scone</h4>
+								<p class="card-text">Savory scone with fresh jalapenos, 2 different types of cheddar, and a crispy 
+ parmesan topping. </p>
+							</div>
+						</div>
+					</div>					
+				</div>	
+				<div class="row justify-content-center">
+					<div class="col-12 col-md-4">
+						<div class="card">
+							<div class="card-body fade-in menuItem">
+								<h4>#4 blueberry goat cheese donut</h4>
+								<p class="card-text">Brioche donut filled with a light blueberry goat cheese whipped cream. Coated with lemon sugar. People love this thing.</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-12 col-md-4">
+						<div class="card">
+							<div class="card-body fade-in menuItem">
+								<h4>#5 choco-no-nut cookie</h4>
+								<p class="card-text">A chewy chocolate chip cookie the size of a toddler's face. Coconut flakes in the background!</p>
+							</div>
+						</div>
+					</div>					
 				</div>
 			</div>			
 		</div>
@@ -701,7 +726,7 @@
 						</div>							
 						<div class="mb-3">
 							<h4>"I use Venmo like twice a year to pay my babysitter or whatever. How do I order with Venmo?"</h4>
-							<p class="answer">It's easy! Just send $20 plus an extravagant tip to <a href="https://venmo.com/sundaybakeday">@sunday.bakeday</a> and include your order and address in the message. Here's an example of a typical order:</p>
+							<p class="answer">It's easy! Just send $20 plus an extravagant tip to <a href="https://venmo.com/sundaybakeday">@sundaybakeday</a> and include your order and address in the message. Here's an example of a typical order:</p>
 							<p style="font-style: italic;">"#1 #3 #4 #5 please! 420 Diamond Ave SE. Please leave at the side door. Thanks! I love you."</p>
 						</div>							
 						<div class="mb-3">
@@ -733,16 +758,16 @@
 						</div>
 						<div class="col-6 col-md-2 col-lg-2 mb-4 insta-box">
                             <a href="https://www.instagram.com/p/CdZW8wzrY2e/">
-								<img src="https://i.imgur.com/nPxusMT.jpg" class="img-thumbnail" alt="Great content.">
+                                <img src="https://i.imgur.com/nPxusMT.jpg" class="img-thumbnail" alt="Great content.">
                                 <span class="overlay"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="64"></span>
                             </a>
-                       </div>
+                        </div>
 						<div class="col-6 col-md-2 col-lg-2 mb-4 insta-box">
-							<a href="https://www.instagram.com/p/Cd3Oe3OL-Z9/?utm_source=ig_web_copy_link">
-								<img src="https://i.imgur.com/vrq8SZF.jpg" class="img-thumbnail" alt="Great content.">
-								<span class="overlay"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="64"></span>
-							</a>
-						</div>
+                            <a href="https://www.instagram.com/p/Cd3Oe3OL-Z9/?utm_source=ig_web_copy_link">
+                                <img src="https://i.imgur.com/vrq8SZF.jpg" class="img-thumbnail" alt="Great content.">
+                                <span class="overlay"><img src="https://gist.githubusercontent.com/sunday-bakeday/d6ccf666e5fc369d3ff3e474fbdc2fc4/raw/b5775f9f2f2ba8a953b2ae80822d2db1dca313f5/instagram.svg" alt="Sunday Bakeday on Instagram" width="64"></span>
+                             </a>
+                        </div>
 						<div class="col-6 col-md-2 col-lg-2 mb-4 insta-box">
 							<a href="https://www.instagram.com/p/Cdlv1aXO-05/">
 								<img src="https://i.imgur.com/D0iqKLk.jpg" class="img-thumbnail" alt="Great content.">
@@ -765,4 +790,3 @@
 		
 	</body>
 </html>
-
